modules/vpc/route-tables.tf
# ========================= mark default route table ================================
resource "aws_default_route_table" "def-pub-rt" {
  default_route_table_id = aws_vpc.main.default_route_table_id
  tags = {
    Name = "${var.vpc_name}-default-public-rt"
  }
}

# ========================= custom private route table ==============================
resource "aws_route_table" "private" {
  count  = var.enable_nat == true ? 0 : 1
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.vpc_name}-private-rtb"
  }
}

resource "aws_route_table" "private1" {
  count  = var.enable_nat == true ? 1 : 0
  vpc_id = aws_vpc.main.id

  tags = {
    Name = local.private_rtb_name
  }
}

resource "aws_route" "nat1" {
  count          = var.enable_nat == true ? 1 : 0
  route_table_id = aws_route_table.private1[0].id

  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat1[0].id
}

resource "aws_route_table" "private2" {
  count  = var.enable_nat == true && var.multi_az_nat == true ? 1 : 0
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.vpc_name}-private-rtb2"
  }
}

resource "aws_route" "nat2" {
  count          = var.enable_nat == true && var.multi_az_nat == true ? 1 : 0
  route_table_id = aws_route_table.private2[0].id

  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat2[0].id
}

# ====================== custom public route table ==============================
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.vpc_name}-public-rt"
  }
}

resource "aws_route" "igw" {
  count          = var.create_igw == true ? 1 : 0
  route_table_id = aws_route_table.public.id

  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw[0].id
}

# ========================= associate the subnets to route table =======================
# Single-AZ NAT: both subnets use private1 route table
resource "aws_route_table_association" "private-1a-single-nat" {
  count          = var.enable_nat == true && var.multi_az_nat == false ? 1 : 0
  subnet_id      = aws_subnet.private-1a.id
  route_table_id = aws_route_table.private1[0].id
}

resource "aws_route_table_association" "private-1b-single-nat" {
  count          = var.enable_nat == true && var.multi_az_nat == false ? 1 : 0
  subnet_id      = aws_subnet.private-1b.id
  route_table_id = aws_route_table.private1[0].id
}

# Multi-AZ NAT: each subnet uses its own route table
resource "aws_route_table_association" "private-1a-multi-nat" {
  count          = var.enable_nat == true && var.multi_az_nat == true ? 1 : 0
  subnet_id      = aws_subnet.private-1a.id
  route_table_id = aws_route_table.private1[0].id
}

resource "aws_route_table_association" "private-1b-multi-nat" {
  count          = var.enable_nat == true && var.multi_az_nat == true ? 1 : 0
  subnet_id      = aws_subnet.private-1b.id
  route_table_id = aws_route_table.private2[0].id
}

resource "aws_route_table_association" "public-1a" {
  subnet_id      = aws_subnet.public-1a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public-1b" {
  subnet_id      = aws_subnet.public-1b.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private-1a-nonat" {
  count          = var.enable_nat == true ? 0 : 1
  subnet_id      = aws_subnet.private-1a.id
  route_table_id = aws_route_table.private[0].id
}

resource "aws_route_table_association" "private-1b-nonat" {
  count          = var.enable_nat == true ? 0 : 1
  subnet_id      = aws_subnet.private-1b.id
  route_table_id = aws_route_table.private[0].id
}
